# genli

./: Cargo.toml  LICENSE  README.md
src/: args.rs  dice.rs  game.rs  main.rs
src/args/: mod.rs
src/game/: mod.rs
src/game/dice/: dicegame.rs  diceresults.rs  diceroll.rs  mod.rs
src/game/map/: map.rs  mapgame.rs  mapgen.rs  mod.rs
