[package]
name = "genli"
version = "0.1.0"
authors = ["Daniel Schröder <schroeder_daniel@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.1"

[dependencies.rand]
version = "0.7.2"
features = ["small_rng"]
