[package]
name = "genli"
version = "0.1.0"
authors = ["Daniel Schröder <schroeder_daniel@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.1"
reqwest = "0.9.21"
console = "0.9.0"
dialoguer = "0.4.0"
indicatif = "0.12.0"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"

[dependencies.rand]
version = "0.7.2"
features = ["small_rng"]


